Fixed hero image not appearing on GitPages

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,7 +70,7 @@
   }
   
   .hero {
-    background-image: url("hero-bg.jpg");
+    background-image: url("../pictures/hero-bg.jpg");
     height: 600px;
     background-size: cover;
     background-position: center;
