--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -140,54 +140,75 @@
     padding: 10px 20px;
     font-size: 16px;
   }
-  
-  .intro {             
-    text-align: center;
-  }
-  
+
   .intro p {
     line-height: 1.7;
     color: #39a6b2;
     width: 80%;
+    text-align: center;
     font-size: 20px;
     margin: 0 auto;
   }
   
   .steps {
-    text-align: center;
     background: #fce138;
   }
-  
-  .steps div {
-    margin-bottom: 80px;
+
+  .step {
+    margin: 50px auto;
+    padding-bottom: 50px;
+    width: 80%;
+    border-bottom: 1px solid #39a6b2;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
   }
-  
-  .steps img {
-    width: 15%;
-    margin: 10px 0;
+
+  .step-info {
+    flex: 2 70%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
   }
-  
-  .steps h3 {
+
+  .step-img {
+    flex: 1 12%;
+    margin-right: 20px;
+  }
+
+  .step-img img{
+    max-width: 100%;
+  }
+
+  .step-text {
+    flex: 12;
+  }
+
+  .step h3 {
     color: #024e76;
     font-size: 46px;
-    margin-top: 10px;
+    flex: 1 30%;
+  }
+
+  .step-text h4 {
+    font-size: 26px;
+    line-height: 1.5;
+    color: #024e76;
   }
   
-  .steps p {
+  .step-text p {
     color: #39a6b2;
-    font-size: 23px;
+    font-size: 18px;
   }
-  
-  .steps span{
-    font-size: 38px;
-  }
-  
+
   .section-title {
     font-size: 55px;
     color: #024e76;
-    margin-bottom: 35px;
-    padding: 0 100px 20px 100px;
-    display: inline-block;
+    padding-bottom: 20px;
+    text-align: center;
+    margin: 1 auto 35px auto;
+    width: 50%;
     border-bottom: 3px solid;
   }
   
@@ -199,9 +220,9 @@
     border-color: #39a6b2;
   }
   
-  .trainers {
-    text-align: center;
-  }
+ /* .trainers {
+Removed during flexbox creation
+  } */
   
   .trainer {
     width: 900px;
@@ -247,7 +268,7 @@
   }
   
   .contact {
-    text-align: center;
+
     background: #024e76;
   }
   
@@ -300,4 +321,8 @@
     font-weight: normal;
     font-size: 42px;
     font-style: italic;
+  }
+
+  .flex-row {
+    display: flex;
   }
