--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,8 +15,16 @@ body {
 /* Header / NAV Bar styles start */
 
 header {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
   padding: 20px 35px;
   background-color: #39a6b2;
+  background-image: url('../pictures/hero-bg.jpg');
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  background-position: 80%;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
@@ -27,6 +35,7 @@ header h1 {
   margin: 0;
   font-size: 36px;
   color: #fce138;
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 header a {
@@ -50,6 +59,14 @@ header nav ul li a {
   padding: 10px 15px;
   font-weight: lighter;
   font-size: 1.55vw;
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+header nav ul li a:hover {
+  background: #fce138;
+  color: #024e76;
+  border-radius: 15px;
+  text-shadow: none;
 }
 
 /* Header / NAV Bar style end*/
@@ -92,6 +109,8 @@ section {
   background-image: url('../pictures/hero-bg.jpg');
   background-size: cover;
   background-position: center;
+  background-attachment: fixed;
+  background-position: 80%;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
@@ -111,15 +130,18 @@ section {
   font-style: italic;
   font-size: 55px;
   color: #fce138;
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 .hero-form {
   border: 3px solid #024e76;
-  background-color: #fce138;
+  border-radius: 15px;
+  background-color: rgba(252, 225, 56, 0.8);
   padding: 20px;
   color: #024e76;
   width: 40%;
   margin: 3.5%;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 .hero-form h3 {
@@ -132,12 +154,19 @@ section {
 
 .form-input {
   border: 1px solid #024e76;
+  border-radius: 10px;
   display: block;
   padding: 7px 15px;
   font-size: 16px;
   color: #024e76;
+  background-color: rgba(255, 255, 255, 0.75);
   width: 100%;
   margin-bottom: 15px; 
+}
+
+.form-input:focus {
+  background-color: rgba(255, 255, 255, 1);
+  outline: none;
 }
 
 .hero-form label {
@@ -148,9 +177,14 @@ section {
   color: #fce138;
   background-color: #024e76;
   border: none;
+  border-radius: 10px;
   padding: 10px 20px;
   font-size: 16px;
 } 
+
+.hero-form button:hover {
+  background-color: #39a6b2;  
+}
 /* Hero End */
 
 
@@ -240,6 +274,9 @@ section {
   color: #024e76;
 }
 
+.step:last-child {
+  border-bottom: none;
+}
 /* WHAT YOU DO STYLES END */
 
 /* MEET THE TRAINERS START */
@@ -324,6 +361,7 @@ section {
 
 .contact-form input, .contact-form textarea {
   border: 1px solid #024e76;
+  border-radius: 10px;
   display: block;
   padding: 7px 15px;
   font-size: 16px;
@@ -331,11 +369,13 @@ section {
   width: 100%;
   margin-bottom: 15px;
   margin-top: 5px;
+  background-color: rgba(255,255,255, 0.75);
 }
 
 .contact-form button {
   width: 100%;
   border: none;
+  border-radius: 10px;
   background: #fce138;
   color: #024e76;
   text-align: center;
@@ -343,10 +383,19 @@ section {
   font-size: 16px;
 }
 
+.contact-form button:hover {
+  color: #fce138;
+  background: #39a6b2;
+}
+
 .contact-info a {
   color: #fce138;
 }
 
+.contact-info:focus, .contact-form textarea:focus {
+  background-color: rgba(255, 255, 255, 1);
+  outline: none;
+}
 
 /* REACH OUT STYLES END */
 
@@ -368,6 +417,7 @@ section {
   header {
     padding-bottom: 0;
     justify-content: center;
+    position: relative;
   }
 
   header h1 {
